--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,114 @@
+* {
+    margin: 0;
+    /* top: 0; */
+    box-sizing: border-box;
+}
+body {
+    background: linear-gradient(120deg, #210535, #062c43);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
+h1 {
+    text-align: center;
+    color: rgb(243, 242, 232);
+    font-weight: bolder;
+    font-size: 3.125rem;
+}
+#root {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    position: relative;
+    /* min-height: 100vh; */
+}
+.form {
+    /* height: 50%; */
+    /* margin-top: 15vh; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+}
+#todo_input {
+    border: none;
+    background-color: #a9d5f4;
+    max-width: 35vw;
+    width: 20vw;
+    height: 7.5vh;
+    border-radius: 15px 0px 0px 15px;
+    border-style: none;
+    /* pointer-events: none; */
+    font-size: 1.5rem;
+}
+#todo_add {
+    border: none;
+    background-color: #a9d5f4;
+    max-width: 35vw;
+    width: 5vw;
+    height: 7.5vh;
+    border-radius: 0px 15px 15px 0px;
+    border-style: none;
+}
+#todo_add:hover {
+    transition: all 0.3s ease;
+    background-color: #4077ad;
+}
+.select,
+.todo_filter {
+    border: none;
+    background-color: #a9d5f4;
+    max-width: 35vw;
+    width: 5.75vw;
+    height: 7.5vh;
+    border-style: none;
+    margin-left: 1%;
+}
 .fa-trash,
 .fa-check {
     pointer-events: none;
 }
-.fall {
+/* .fall {
     transform: translateY(8rem) rotateZ(20deg);
     opacity: 0;
-}
+} */
 .completed {
     text-decoration: line-through;
     opacity: 0.5;
+}
+footer {
+    max-width: 100vw;
+    min-width: 25vw;
+}
+footer button {
+    margin: 3%;
+}
+footer button:hover {
+    transition: all 0.3s ease;
+    background-color: #4077ad;
+}
+#todo_list {
+    list-style: none;
+    text-decoration: none;
+    max-width: 100vw;
+}
+.todo_item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: red;
+    align-items: center;
+    max-width: 100vw;
+    width: 10vw;
+}
+
+.buttonList button,
+footer button {
+    border: none;
+    background-color: #a9d5f4;
+    max-width: 35vw;
+    width: auto;
+    height: 7.5vh;
+    border-style: none;
+    border-radius: 0;
 }
