--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,8 @@ h1 {
 }
 #todo_input {
     border: none;
-    background-color: #a9d5f4;
-    max-width: 35vw;
+    background-color: #81b2e5;
+    max-width: 45vw;
     width: 20vw;
     height: 7.5vh;
     border-radius: 15px 0px 0px 15px;
@@ -43,8 +43,8 @@ h1 {
 }
 #todo_add {
     border: none;
-    background-color: #a9d5f4;
-    max-width: 35vw;
+    background-color: #81b2e5;
+    max-width: 20vw;
     width: 5vw;
     height: 7.5vh;
     border-radius: 0px 15px 15px 0px;
@@ -56,13 +56,15 @@ h1 {
 }
 .select,
 .todo_filter {
+    font-size: 1.25rem;
     border: none;
-    background-color: #a9d5f4;
+    background-color: #81b2e5;
     max-width: 35vw;
     width: 5.75vw;
     height: 7.5vh;
     border-style: none;
     margin-left: 1%;
+    color: #383c66;
 }
 .fa-trash,
 .fa-check {
@@ -81,7 +83,10 @@ footer {
     min-width: 25vw;
 }
 footer button {
+    font-size: 1.25rem;
+    color: #383c66;
     margin: 3%;
+    max-width: 50vw;
 }
 footer button:hover {
     transition: all 0.3s ease;
@@ -96,19 +101,59 @@ footer button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: red;
+    background-color: #c9e3f3;
     align-items: center;
     max-width: 100vw;
-    width: 10vw;
+    width: auto;
+    min-width: 10vw;
+    color: #383c66;
+    font-size: 1.5rem;
 }
 
 .buttonList button,
 footer button {
     border: none;
-    background-color: #a9d5f4;
-    max-width: 35vw;
+    background-color: #81b2e5;
     width: auto;
     height: 7.5vh;
     border-style: none;
     border-radius: 0;
+}
+.buttonList button {
+    min-width: 2.75vw;
+}
+.buttonList button:nth-child(1):hover {
+    background-color: green;
+    transition: all 0.3s ease;
+}
+
+.buttonList button:nth-child(2):hover {
+    background-color: red;
+    transition: all 0.3s ease;
+}
+@media (max-width: 400px) {
+    #todo_input,
+    #todo_add,
+    .todo_filter,
+    .select {
+        width: auto;
+    }
+    .todo_filter {
+        font-size: 1rem;
+    }
+    footer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    footer button {
+        font-size: 1rem;
+    }
+    .todo_item {
+        font-size: 1rem;
+    }
+    .buttonList button {
+        min-width: 7.5vw;
+    }
 }
